Language uses explicit placeholders